Wed Dec  3 02:16:18 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* init_sec_context.c (make_ap_req): Enforce a stricter requirement
		on the ticket expiration time of the credentials, since
		accept_sec_context doesn't use the timeskew fudge for
		checking ticket expirations.
		(krb5_gss_init_sec_context): Return GSS_S_NO_CRED when
		appropriate. 

Wed Jan 21 19:14:09 1998  Tom Yu  <tlyu@mit.edu>

	* gssapiP_krb5.h: Add rcache member to the creds
	structure. [krb5-libs/370]

	* accept_sec_context.c (krb5_gss_accept_sec_context): Actually set
	an rcache in auth context from the one saved in the creds
	structure. [krb5-libs/370]

	* acquire_cred.c (acquire_accept_cred): Set up an rcache for use
	later. [krb5-libs/370]

	* delete_sec_context.c (krb5_gss_delete_sec_context): Don't delete
	the rcache when freeing the auth_context. [krb5-libs/370]

	* rel_cred.c (krb5_gss_release_cred): Properly close the
	rcache. [krb5-libs/370]

Mon Dec 29 10:30:43 1997  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (OBJS): Changed val_cred.$(OBJECT) to
	        val_cred.$(OBJEXT) for windows building.

Sun Dec  7 10:42:32 1997  Ezra Peisach  <epeisach@mit.edu>

	* val_cred.c (krb5_gss_validate_cred): Free principal extracted
		from credential cache when finished.

Sat Nov 15 20:14:05 1997  Theodore Y. Ts'o  <tytso@mit.edu>

	* accept_sec_context.c (krb5_gss_accept_sec_context), 
	  init_sec_context.c (krb5_gss_init_sec_context),
	  inq_cred.c (krb5_gss_inquire_cred): Call krb5_gss_validate_cred
	  	to make sure the credential handle is still valid.

	* val_cred.c (krb5_gss_validate_cred): New file which validates
		the credential to make sure it is valid, including
		checking to make sure the credentials cache still points
		at the same krb5 principal as it did before.

	* accept_sec_context.c (krb5_gss_accept_sec_context): Return
 		GSS_S_FAILURE if a non-NULL context handle is passed to
 		it.

Thu Sep 18 17:55:09 1997  Tom Yu  <tlyu@mit.edu>
